--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,9 @@ ul {
   align-items: center;
   background-color: white;
   padding: 15px 30px;
+  border: 2px solid red;
+  max-height: 100%;
+  max-width: 100%;
 }
 
 .nav-logo {
