--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,6 @@ ul {
   align-items: center;
   background-color: white;
   padding: 15px 30px;
-  border: 2px solid red;
   max-height: 100%;
   max-width: 100%;
 }
@@ -585,6 +584,7 @@ footer {
   .nav-links{
     gap: 20px;
     padding-right: 0px;
+    background-color: red;
   }
-  
+
 }
