--- a/styles.css
+++ b/styles.css
@@ -70,16 +70,16 @@ ul {
 }
 
 .about-1{
-  height: 100%;
-  width: 100%;
+  max-height: 100%;
+  max-width: 100%;
   display: grid;
   background-color: white;
 }
 
 .about-sub-h{
   display: flex;
-  height: 100%;
-  width: 100%;
+  max-height: 100%;
+  max-width: 100%;
   justify-content: center;
   align-items: center;
 }
@@ -93,8 +93,8 @@ ul {
 
 .about-sub-p{
   display: flex;
-  width: 100%;
-  height: 100%;
+  max-width: 100%;
+  max-height: 100%;
   padding: 30px 0px 50px 0px;
   justify-content: center;
   align-items: center;
@@ -137,8 +137,8 @@ ul {
 
 
 .about-2{
-  width: 100%;
-  height: 100%;
+  max-width: 100%;
+  max-height: 100%;
   display: flex;
   justify-content: center;
 
@@ -592,6 +592,22 @@ footer {
 
   .nav-logo{
     font-size: 1.2rem;
+  }
+
+  .about-sub-h h2{
+    font-size: 1.5rem;
+  }
+
+  .about-sub-p p{
+    font-size: 1rem;
+    padding: 0px 25px 0px 25px;
+  }
+
+  .about-main{
+    display: grid;
+  }
+  .about-2{
+    margin-left: 80px;
   }
 
 }
