--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,8 @@ body {
   display: grid;
   max-width: 100%;
   max-height: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 
@@ -278,7 +280,7 @@ ul {
   font-family: inconsolata, sans-serif;
   display: flex;
   justify-content: center;
-  margin-top: 100px;
+  margin-top: 8cqh;
 }
 
 .tech-icons li{
@@ -418,9 +420,9 @@ ul {
 /* Education */
 
 #education{
-  background-color: black;
-  height: 100%;
-  width: 100%;
+  background-color: white;
+  max-height: 100%;
+  max-width: 100%;
   display: grid;
   margin-bottom: 10%;
 }
@@ -445,6 +447,7 @@ ul {
   display: flex;
   height: 100%;
   width: 100%;
+  margin-top: 100px;
 }
 
 .edu-logo-container{
