--- a/styles.css
+++ b/styles.css
@@ -150,6 +150,13 @@ ul {
 .about-2{
   width: 100%;
   height: 100%;
+  display: flex;
+  align-items: top;
+}
+
+.about-2 img{
+  height: 70%;
+  width: 100%;
 }
 
 .about-main{
@@ -662,14 +669,23 @@ footer {
     display: grid;
     margin-bottom: 5%;
   }
+  
   .about-2{
     height: 100%;
     width: 100%;
+    display: grid;
+    justify-content: center;
+    align-items: center;
   }
 
   .about-1{
     max-height: 100%;
     max-width: 100%;
+  }
+
+  .about-2 img{
+    height: 70%;
+    width: auto;
   }
 
   .about-sub-button .btn{
@@ -698,6 +714,7 @@ footer {
 
   .tech-skill h2{
     font-size:4rem;
+    margin-top: 20px;
   }
 
   .tech-skill p{
